test/langtools/tools/javac/Diagnostics/7039014/T7039014a.out
T7039014a.java:16:5: compiler.err.incompatible.diff.ret.same.type: T7039014a.A<java.lang.String>, m, java.lang.String
1 error
